--- a/DOM/one.html
+++ b/DOM/one.html
@@ -6,8 +6,10 @@
 </head>
 <body>
     <div class="bg-black">
-        <h1 class = "heading">DOM Learning</h1>
+        <h1 id = "id" class = "heading">DOM Learning</h1>
         <p>Lorem ipsum dolor sit amet.</p>
+        <!-- to learn difference between innerText and textContent-->
+        <h1 id = "title" class = "footer">This is shown in both <span style = "display: none;">This is shown only in textContent</span></h1>
     </div>
 </body>
 </html>
