Color Switcher Created

--- a/Projects/01_ColourChanger/index.html
+++ b/Projects/01_ColourChanger/index.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <div class = "canvas">
+    <h1>Colour Switcher</h1>
+    <span class = "button" id = "grey"></span>
+    <span class = "button" id = "white"></span>
+    <span class = "button" id = "yellow"></span>
+    <span class = "button" id = "blue"></span>
+    <h2>Click on any box to change the color of the page</h2>
+    </div>
+    <script src = "script.js"></script>
 </body>
 </html>
